Fix accordion on mobile

--- a/styles/accordion.css
+++ b/styles/accordion.css
@@ -77,3 +77,42 @@
     border-right: none;
 }
 
+@media screen and (max-width: 991px) {
+    .accordion {
+        flex-direction: column;
+        height: auto;
+    }
+
+    .accordion-item {
+        display: block;
+        width: 100%;
+        border: 1px solid #000;
+        border-bottom: none;
+        padding-top: 1.4rem;
+        padding-bottom: 1.4rem;
+    }
+
+    .accordion-item.active {
+        width: 100%;
+    }
+
+    .accordion-content {
+        width: 100%;
+        padding: 2rem;
+    }
+
+    .last-item {
+        border-bottom-left-radius: 10px;
+        border-top-right-radius: 0px;
+        border-bottom-right-radius: 10px;
+        border-bottom: 1px solid #000;
+    }
+    
+    .first-item {
+        border-top-left-radius: 10px;
+        border-top-right-radius: 10px;
+        border-bottom-left-radius: 0px;
+    }
+    
+}
+
